# xgc2-scout-msgs

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: ci.yml  release.yml
.xgc2/: product.yml
.xgc2/scripts/: build_debs_in_docker.sh  check_installed_packages.sh  check_package_compliance.sh  package_debs.sh  publish_apt_repo.sh
