<?xml version="1.0"?>
<package>
  <name>scout_msgs</name>
  <version>0.3.3</version>
  <description>Messages for AgileX Scout</description>

  <author email="contact@westonrobot.com">TODO</author>

  <maintainer email="contact@westonrobot.com">TODO</maintainer>
  <maintainer email="contact@westonrobot.com">TODO</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/lxk36/xgc2-scout-msgs</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
